# euler-828

./: .buildinfo  README.md  TODO  euler828.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.cfg  t.ipynb  tox.ini
.doctrees/: environment.pickle  euler828.doctree  index.doctree  modules.doctree
.doctrees/notebooks/: example.doctree
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/euler828/: expression.html  node.html  problem.html  reader.html  solver.html
_sources/: modules.rst
docs/: conf.py  index.rst
docs/source/: conf.py  euler828.rst  index.rst
docs/source/notebooks/: example.ipynb
euler-828/: expression.py  node.py  problem.py  reader.py  solver.py
euler828/: __init__.py  expression.py  node.py  problem.py  reader.py  solver.py
notebooks/: example.html
tests/: test_expression.py  test_reader.py  test_solve.py  test_solver.py
