[metadata]
name = euler828
description = Project Euler Problem 828 solver
url = https://github.com/Garyzan/euler-828
author = Timo van Meegdenburg
license = GPLv3
license_files = LICENSE
version = 0.1.0
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10.14

[options]
python_requires = >=3.10
packages = euler828

[options.extras_require]
testing =
    tox >= 4.14
    pytest >= 8.1
    pytest-cov >= 5.0

docs =
    sphinx >= 7.2.6
    sphinx-book-theme>=1.1.2
    numpydoc >= 1.7.0
    myst_nb >= 1.0.0
    sphinx_design >= 0.4.1